# toaster-protocol

./: .gitignore  CMakeLists.txt  README.md  cipher_psuedocode.md  spellcheck_psuedocode.md  toaster-protocol.slnx
.claude/: settings.local.json
.devcontainer/: devcontainer.json
Cipher/: Cipher.vcxproj  Cipher.vcxproj.filters  Source.cpp  afshin.txt  dan.txt  pch.cpp
Cipher.Core/: Cipher.Core.vcxproj  Cipher.Core.vcxproj.filters  Cipher.cpp  Cipher.h  pch.cpp  pch.h
Cipher.Test/: Cipher.Test.cpp  Cipher.Test.vcxproj  Cipher.Test.vcxproj.filters
Cipher.Test/x64/Debug/: Cipher.Test.dll.recipe  vc145.idb
Cipher.Test/x64/Release/: Cipher.Test.dll.recipe  Cipher.Test.iobj  Cipher.Test.ipdb
Cipher/Debug/: Cipher.exe.recipe  vc145.idb
Cipher/Debug/Cipher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cipher.lastbuildstate  Cl.items.tlog  CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  link.command.1.tlog  (+3 more)
Debug/: input_2.txt
Scratch Pad/: Scratch Pad.vcxproj
SpellCheck/: Source.cpp  SpellCheck.vcxproj  SpellCheck.vcxproj.filters  pch.cpp  test_dict.txt
SpellCheck.Core/: SpellCheck.Core.vcxproj  SpellCheck.Core.vcxproj.filters  SpellCheck.cpp  SpellCheck.h  pch.h
SpellCheck.Test/: SpellCheck.Test.cpp  SpellCheck.Test.vcxproj  SpellCheck.Test.vcxproj.filters
TestResults/3b4426d5-d65e-4bde-bde0-a0b160919cf2/: Danny_DESKTOP-6AQEKE9_2026-02-27.23_13_31.coverage
x64/Debug/: Cipher.Core.idb  Cipher.Test.exp  SpellCheck.Core.idb  SpellCheck.Test.exp
x64/Release/: Cipher.Test.exp  SpellCheck.Test.exp  input.txt  output.txt
(+125 files in other folders)
